commit 8/24